k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dot-env
  labels:
    name: dot-env
    app: dot-env-sveltekit
