k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: dot-env
  labels:
    app: dot-env-mysql
spec:
  selector:
    app: dot-env-mysql
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
  type: ClusterIP
