k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dot-env
  labels:
    app: dot-env-nginx
spec:
  selector:
    app: dot-env-nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
